--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@
 3º Ano/AMOV/.DS_Store
 3º Ano/AMOV/Pratica/.DS_Store
 3º Ano/AMOV/Pratica/Aula7/.DS_Store
+.DS_Store
+1º Ano/.DS_Store
+1º Ano/FCG/.DS_Store
+1º Ano/PROG/EX_PROG/.DS_Store
+2º Ano/.DS_Store
+1º Ano/.DS_Store
+1º Ano/LS/.DS_Store
+.DS_Store
